[Bug 15005][Viewer] Endless loading for viewer when the record number larger than 30 on IE 11

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -41,6 +41,11 @@
   min-height: 0;
 }
 
+.fixIEScrollBar {
+  flex-grow: 1;
+  flex-basis: 0;
+}
+
 .autoScrollBox {
   overflow: auto;
   height: 300px;
